<package>
  <name>slam_gmapping</name>
  <version>1.3.0</version>
  <description>slam_gmapping contains a wrapper around gmapping which provides SLAM capabilities.</description>
  <author>Brian Gerkey</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>CreativeCommons-by-nc-sa-2.0</license>

  <url>http://ros.org/wiki/slam_gmapping</url>

  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
