<package format="2">
  <name>slam_gmapping</name>
  <version>1.3.9</version>
  <description>slam_gmapping contains a wrapper around gmapping which provides SLAM capabilities.</description>
  <author>Brian Gerkey</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>CreativeCommons-by-nc-sa-2.0</license>

  <url>http://ros.org/wiki/slam_gmapping</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <exec_depend>openslam_gmapping</exec_depend>
  <exec_depend>gmapping</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <metapackage/>
  </export>
</package>
